# ALCF_Hands_on_HPC_Workshop

./: .gitignore  .gitmodules  Polaris Tips and Tricks.md  README.md
00_pre_workshop_materials/: README.md
00_pre_workshop_materials/01_statisticalLearning/: statistical_learning.ipynb
00_pre_workshop_materials/02_basicNetworks/: keras-mnist-mlp.ipynb
00_pre_workshop_materials/04_recurrentNetworks/: keras-imdb-rnn.ipynb
00_pre_workshop_materials/04_reinforcementLearning/: BackwardAgent_agent_100.h5  ForwardAgent_agent_100.h5  ForwardAgent_agent_100hidden.h5  README.md  SimpleAgent_agent_100.h5  TDAgent_agent_100hidden.h5  TicTacToeRL.ipynb
00_pre_workshop_materials/05_uncertaintyQuantification/: Probabilistic_Layers_Regression.ipynb
01_distributedDeepLearning/: README.md
01_distributedDeepLearning/DDP/: README.md  pytorch_cifar10.py  pytorch_mnist.py  qsub_cifar10.qsub  qsub_mnist.qsub
01_distributedDeepLearning/DDT/: README.md
01_distributedDeepLearning/DeepSpeed/: README.md
01_distributedDeepLearning/Horovod/: README.md  handson.md  prepare_dataset.sh  pytorch_alexnet_cifar10.py  pytorch_cifar10.py  pytorch_mnist.py  tensorflow2_alexnet_cifar10.py  tensorflow2_cifar10.py  tensorflow2_keras_cifar10.py  tensorflow2_keras_mnist.py  tensorflow2_mnist.py  tensorflow2_mnist_orig.py  test_tf_dataset.py  theta.md  thetagpu.md
02_dataPipelines/: README.md
02_dataPipelines/00_tensorflowDatasetAPI/: README.md  ilsvrc.json  ilsvrc_dataset.py  ilsvrc_dataset_serial.py  submit_theta.sh  submit_thetagpu.sh  submit_thetaknl.sh
02_dataPipelines/01_pytorchDatasetAPI/: ilsvrc.json  ilsvrc_dataset.py  submit_theta.sh  submit_thetagpu.sh
02_distributedDeepLearning/: README.md
02_distributedDeepLearning/DDP/: pytorch_mnist.py  qsub_cifar10.qsub
03_distributedHyperOpt/: README.md
03_distributedHyperOpt/01_BasicHPS/: README.md  dh-analytics-hps.ipynb  load_data.py  model_run.py  problem.py  results.csv
03_distributedHyperOpt/01_HPS_basic_classification_with_tabular_data/: 01_HPS_basic_classification_with_tabular_data.ipynb  README.md  jupyter-job.qsub  results.csv
03_distributedHyperOpt/02_HPS_basic_classification_with_tabular_data/: 02_HPS_basic_classification_with_tabular_data.ipynb  README.md  deephyper-job.qsub  jupyter-job.qsub  model_run.py  results.csv  ssh_tunnel.sh
03_distributedHyperOpt/02_HPS_with_tabular_data/: 01_HPS_basic_classification_with_tabular_data.ipynb  README.md  deephyper-job.qsub  model_run.py
04_Simulation_ML/: setup.sh
04_Simulation_ML/ThetaGPU/: CMakeLists.txt  README.md  app.cpp  setup.sh
04_Simulation_ML/ThetaGPU/app_build/: CMakeCache.txt  Makefile  eigenvectors.npy  ml_module.py
04_Simulation_ML/ThetaKNL/: README.md  (+1 more)
04_profilingDeepLearning/: README.md
05_Simulation_ML/: Background.md  HandsOn.md  HandsOn_SmartSim.md  LICENSE.md  README.md
05_Simulation_ML/ML_Fortran_SmartSim/example/src/: CMakeLists.txt  doConfig.sh  trainPar.py
05_Simulation_ML/ML_PythonC++_Embedding/ThetaKNL/: CMakeLists.txt  README.md  setup.sh  submit.sh
05_Simulation_ML/ML_PythonC++_Embedding/ThetaKNL/app_build/: Makefile  eigenvectors.npy  ml_module.py
06_Simulation_ML/ML_Fortran_SmartSim/example/src/: CMakeLists.txt  env_Theta.sh  trainPar.py
DataPipelines/: README.md
InferenceOptimizations/: README.md  create_virtual_env.sh  requirements.txt  run_HF.py  run_HF.sh  run_vllm.py  run_vllm.sh  run_vllm_SD.sh  run_vllm_quant.sh
Scikit-learn/: Scikit-learn_Intel_ext.ipynb  Scikit-learn_with_dask.ipynb  activate_rapids_env_polaris.sh  close_jupyterlab_polaris.sh  install_rapids_polaris.sh  open_jupyterlab_polaris.sh  start_daskmpi_polaris.sh  start_daskmpi_rank.sh  start_rapids_cluster_polaris.sh  start_rapids_cluster_rank.sh  ~$Intro to Scikit-learn_dask_intelex.pptx
agentic_workflows/: README.md
ai-testbeds/: README.md
aiDataPipelines/: README.md
aiTestbeds/: README.md
ai_ml_profiling/: README.md  ncu_wrapper.sh  nsys_wrapper.sh  qsub_line_profile_polaris_sequence_parallelism.sh  qsub_ncu_wrapper_polaris_sequence_parallelism.sh  qsub_nsys_wrapper_polaris_sequence_parallelism.sh  qsub_polaris_sequence_parallelism.sh  qsub_profile_polaris_sequence_parallelism.sh  sequence_parallelism_compute.py  sequence_parallelism_compute_lineprofile.py
couplingSimulationML/: Background.md  LICENSE.md  README.md  Tips.md
couplingSimulationML/ML_PythonC++_Embedding/ThetaGPU_OCCA/: CMakeLists.txt  README.md  build.sh  main.cpp  set_OCCA_env.sh
couplingSimulationML/ML_PythonC++_Embedding/ThetaGPU_OCCA/kernel/: burger.okl
couplingSimulationML/SmartSim/Polaris/Fortran/train_coDB/src/: CMakeLists.txt  clean.sh  doConfig.sh  driver.py  load_data.f  trainPar.py
darshan-hands-on/: README.md  polaris-setup-env.sh
dataPipelines/: README.md
distributedDeepLearning/: README.md
extraMachineLearningMaterials/: README.md
file-systems/: README.md  lustre-striping.sh  ssd-stage-in.sh  ssd-stage-out.sh
hyperparameterManagement/: README.md
inference_service/: README.md
learningFrameworks/: JAX.ipynb  PyTorch.ipynb  Pytorch.ipynb  README.md  TensorFlow.ipynb  Tensorflow.ipynb
llm/: README.md
ml-at-scale/: README.md
petsc/: README.md  makefile  multidim_rosenbrock.c
programmingModels/: README.md
programmingModels/SYCL/9_sycl_of_hell/: 1_my_first_kernel.cpp  2_parallel_for.cpp  4_memory.cpp  5_copy_device_to_host.cpp  6_in_order.cpp  7_out_of_order.cpp  8_reduction.cpp  CMakeLists.txt  README.md
programmingModels/SYCL/9_sycl_of_hell/advanced_inferno/: 0_parallel_for_functor.cpp  10_host_task.cpp  1_dag_queue_functor.cpp  2_opencl_kernel.cpp  3_buffer_2d.cpp  4_buffer_atomic.cpp  6_buffer_slm.cpp  7_allocator_usm.cpp  7_force_allocate.cpp  8_matrix_mul_local_intel.cpp  9_matrix_mul_mkl.cpp  CMakeLists.txt  Makefile  argparse.hpp  hierarchical.cpp
programmingModels/SYCL/9_sycl_of_hell/bleeding_edge/: 4_buffer_id_introspection.cpp  CMakeLists.txt  Makefile  argparse.hpp  esimd_test_utils.hpp  omp_sycl.cpp  reduction.cpp  vadd_usm.cpp  ze_interop.cpp
programmingModels/SYCL/9_sycl_of_hell/cmake/: FindSYCL.cmake
workflows/: README.md
(+661 files in other folders)
